--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
 
 <div class="container">
   <div class="header">
-    <p>Get started today</p>
+    <h1>Get started today</h1>
+    <form class="form-container" action="">
+      <div>
+        <h2>First name</h2>
+        <input type="text">
+      </div><!--
+      --><div>
+        <h2>Last name</h2>
+        <input type="text">
+      </div><!--
+      --><div>
+        <h2>Email adress</h2>
+        <input type="email">
+      </div><!--
+      --><div>
+        <h2>Password</h2>
+        <input type="password">
+      </div><!--
+      --><br>
+      <input type="submit" class="button-submit">
+    </form>
 </div>
 
-
-<form action="">
-  <input type="text">
-  <input type="text">
-  <input type="text">
-  <input type="text">
-  <input type="submit" name="" value="Claim your trial">
-</form>
 
   </div>
 </body>
