--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <div class="container">
   <div class="header">
-    <h1>Get started today</h1>
+    <h1>Get started today</h1></div>
     <form class="form-container" action="">
+<div class="input-holder">
       <div>
         <h2>First name</h2>
         <input type="text">
@@ -28,11 +29,13 @@
       --><div>
         <h2>Password</h2>
         <input type="password">
+      </div>
       </div><!--
       --><br>
+      <hr>
       <input type="submit" class="button-submit">
     </form>
-</div>
+
 
 
   </div>
