--- a/JS/index.html
+++ b/JS/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="script.js" charset="utf-8"></script>
+  <script src="operators.js" charset="utf-8"></script>
   </head>
 <body>
 
