Ввод имени и вывод его в консоли

--- a/JS/index.html
+++ b/JS/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <script src="script.js" charset="utf-8"></script>
   <script src="operators.js" charset="utf-8"></script>
+  <script src="oldschool.js" charset="utf-8"></script>
   </head>
 <body>
 
