--- a/Supreme/index.html
+++ b/Supreme/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="images/icon.png">
+
 </head>
 <body>
 <div class="container">
@@ -28,7 +29,7 @@
       <li>
         <a href="https://www.yandex.ru/" target="_blank">shop</a></li>
       <li>
-        <a href="https://www.yandex.ru/" target="_blank">random</a></li>
+        <a href="https://www.yandex.ru/" target="_blank" id="random">random</a></li>
       <li>
         <a href="https://www.yandex.ru/" target="_blank">about</a></li>
       <li>
@@ -59,5 +60,6 @@
     </ul>
   </div>
 </div>
+<script src="script.js" charset="utf-8"></script>
 </body>
 </html>
